force-app/main/default/objects/Cliente__c/Cliente__c.object-meta.xml
<CustomObject>
    <label>Empresa cliente</label>
    <nameField>
        <label>Nome de Cliente:</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Empresas_cliente</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>