force-app/main/default/objects/Cliente__c/fields/Capital_social__c.field-meta.xml
<CustomField>
    <fullName>Capital_social__c</fullName>
    <label>Capital social</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>