force-app/main/default/objects/Cliente__c/fields/Endere_o__c.field-meta.xml
<CustomField>
    <fullName>Endere_o__c</fullName>
    <label>Logradouro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>