force-app/main/default/objects/Cliente__c/fields/Linha__c.field-meta.xml
<CustomField>
    <fullName>Linha__c</fullName>
    <label>Linha</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VETERINÁRIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>