force-app/main/default/objects/Cliente__c/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <label>Numero</label>
    <length>5</length>
    <type>Text</type>
</CustomField>