force-app/main/default/objects/Cliente__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <label>País</label>
    <length>200</length>
    <type>Text</type>
</CustomField>