force-app/main/default/objects/Cliente__c/fields/Raz_o_Social__c.field-meta.xml
<CustomField>
    <fullName>Raz_o_Social__c</fullName>
    <label>Razão Social</label>
    <length>200</length>
    <type>Text</type>
</CustomField>