force-app/main/default/objects/Cliente__c/fields/Socios__c.field-meta.xml
<CustomField>
    <fullName>Socios__c</fullName>
    <label>Sócios</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>