force-app/main/default/objects/Cliente__c/fields/Tipo_logradouro__c.field-meta.xml
<CustomField>
    <fullName>Tipo_logradouro__c</fullName>
    <label>Tipo de logradouro</label>
    <length>50</length>
    <type>Text</type>
</CustomField>