force-app/main/default/objects/Cliente__c/fields/Whatsapp__c.field-meta.xml
<CustomField>
    <fullName>Whatsapp__c</fullName>
    <label>Whatsapp</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>